fix dark mode style

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@
   --color-secondary: #f6f6f6;
   --font-family: system-ui;
   background-color: #97ce4c;
-
 }
 
 body {
@@ -39,8 +38,8 @@ main {
   width: 40%;
 }
 
-
 /* Dark mode */
+
 .settings__switch-container input {
   position: absolute;
   opacity: 0;
@@ -53,15 +52,15 @@ main {
 }
 .settings__dark-mode-wrapper {
   display: flex;
-  justify-content: space-between;
-  
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
 }
 
 body.dark-mode {
   background-color: blueviolet;
   color: greenyellow;
   display: grid;
-
 }
 
 .switch-container input {
